[gd_scene load_steps=33 format=3 uid="uid://dgx4k2c886vkd"]

[ext_resource type="Shader" path="res://Art/Models/Shaders/psprocess.gdshader" id="1_5g14c"]
[ext_resource type="PackedScene" uid="uid://ckh5r0ra3yk6d" path="res://Art/Models/New Mods/full_scene.tscn" id="2_nysh5"]
[ext_resource type="Script" path="res://player/character.gd" id="3_lvnbd"]
[ext_resource type="PackedScene" uid="uid://bjslps8ek4m2j" path="res://Art/Models/Textures/Train_updated.tscn" id="4_ogrgg"]
[ext_resource type="PackedScene" uid="uid://p88gbdrgkq52" path="res://Art/Models/Shaders/lamps.tscn" id="5_ml03o"]
[ext_resource type="PackedScene" uid="uid://dtqsirbio8dda" path="res://objet_petit_a/card.tscn" id="6_353r6"]
[ext_resource type="PackedScene" path="res://objet_petit_a/coke.tscn" id="7_k7o0f"]
[ext_resource type="Script" path="res://Art/Models/card.gd" id="7_lfu37"]
[ext_resource type="Script" path="res://Art/Models/trashbin.gd" id="7_tecrx"]
[ext_resource type="Shader" path="res://Art/Models/Shaders/crt.gdshader" id="7_uwbut"]
[ext_resource type="Script" path="res://Levels/basic_interactable.gd" id="9_0qldg"]
[ext_resource type="PackedScene" path="res://objet_petit_a/coke_yellow.tscn" id="9_odqhn"]
[ext_resource type="PackedScene" path="res://objet_petit_a/book.tscn" id="10_7i3ge"]
[ext_resource type="PackedScene" uid="uid://cpcfb8vm7br1m" path="res://objet_petit_a/ipod.tscn" id="11_eimwt"]
[ext_resource type="PackedScene" path="res://objet_petit_a/chips.tscn" id="12_46pok"]
[ext_resource type="PackedScene" path="res://objet_petit_a/polaroid.tscn" id="13_ircu3"]
[ext_resource type="PackedScene" path="res://objet_petit_a/green.tscn" id="14_goru1"]
[ext_resource type="PackedScene" path="res://objet_petit_a/gem.tscn" id="15_gbtoo"]
[ext_resource type="PackedScene" path="res://objet_petit_a/keys.tscn" id="16_d18an"]
[ext_resource type="PackedScene" path="res://Art/Models/cekirdek.tscn" id="18_udj4f"]
[ext_resource type="PackedScene" path="res://objet_petit_a/nds.tscn" id="19_lq537"]
[ext_resource type="Script" path="res://objet_petit_a/akbil.gd" id="21_lgq6r"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_c2nmq"]
shader = ExtResource("1_5g14c")
shader_parameter/enabled = true
shader_parameter/dithering = true
shader_parameter/colors = 14
shader_parameter/dither_size = 1

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_hljep"]
sky_top_color = Color(0.294627, 0.277917, 0.398024, 1)
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_bottom_color = Color(0.0590545, 0.0450471, 0.029574, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
energy_multiplier = 0.2

[sub_resource type="Sky" id="Sky_4efno"]
sky_material = SubResource("ProceduralSkyMaterial_hljep")

[sub_resource type="Environment" id="Environment_lahrx"]
background_mode = 2
sky = SubResource("Sky_4efno")
ambient_light_sky_contribution = 0.0
ambient_light_energy = 0.0
tonemap_mode = 3
tonemap_white = 2.98
glow_enabled = true
fog_enabled = true
fog_light_color = Color(0.895816, 0.812688, 0.409673, 1)
fog_light_energy = 2.0
fog_density = 0.008
fog_aerial_perspective = 0.24
fog_sky_affect = 0.055
fog_height = -626.25
volumetric_fog_enabled = true
volumetric_fog_albedo = Color(0.444893, 0.637527, 0.749093, 1)

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_bosp2"]
height = 1.73

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_h5vxs"]
height = 1.33

[sub_resource type="CapsuleMesh" id="CapsuleMesh_7qlmc"]
height = 1.73

[sub_resource type="ShaderMaterial" id="ShaderMaterial_dips7"]
shader = ExtResource("7_uwbut")
shader_parameter/overlay = true
shader_parameter/scanlines_opacity = 0.0
shader_parameter/scanlines_width = 0.0
shader_parameter/grille_opacity = 0.0
shader_parameter/resolution = Vector2(1920, 1080)
shader_parameter/pixelate = true
shader_parameter/roll = true
shader_parameter/roll_speed = 1.0
shader_parameter/roll_size = 0.0
shader_parameter/roll_variation = 3.0
shader_parameter/distort_intensity = 0.02
shader_parameter/noise_opacity = 0.4
shader_parameter/noise_speed = 5.0
shader_parameter/static_noise_intensity = 0.06
shader_parameter/aberration = 0.02
shader_parameter/brightness = 1.4
shader_parameter/discolor = true
shader_parameter/warp_amount = 0.298
shader_parameter/clip_warp = false
shader_parameter/vignette_intensity = 0.16
shader_parameter/vignette_opacity = 0.657

[sub_resource type="CylinderShape3D" id="CylinderShape3D_qfghn"]
height = 0.682309
radius = 0.275843

[sub_resource type="BoxShape3D" id="BoxShape3D_4dp70"]
size = Vector3(0.514038, 1.98737, 1.14444)

[node name="Models" type="Node3D"]

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
material = SubResource("ShaderMaterial_c2nmq")
offset_right = 1932.0
offset_bottom = 1089.0

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
handle_input_locally = false
size = Vector2i(1920, 1080)
render_target_update_mode = 4

[node name="Node3D2" type="Node3D" parent="SubViewportContainer/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 18.6947, 0, 0)

[node name="SpotLight3D" type="SpotLight3D" parent="SubViewportContainer/SubViewport/Node3D2"]
transform = Transform3D(0.996749, -0.0805643, -4.43359e-09, 0.0103777, 0.128394, 0.991669, -0.0798931, -0.988445, 0.128813, 7.35622, 2.09289, -20.3533)
light_color = Color(1, 1, 0.603922, 1)
light_energy = 2.719
light_indirect_energy = 3.304
light_volumetric_fog_energy = 8.424
light_size = 0.024
shadow_enabled = true
spot_range = 6.868
spot_attenuation = 0.69
spot_angle_attenuation = 4.28711

[node name="SpotLight3D3" type="SpotLight3D" parent="SubViewportContainer/SubViewport/Node3D2"]
transform = Transform3D(0.996749, -0.0805643, -4.43359e-09, 0.0103777, 0.128394, 0.991669, -0.0798931, -0.988445, 0.128813, 7.1721, 2.00294, -33.6254)
light_color = Color(1, 1, 0.603922, 1)
light_energy = 2.719
light_indirect_energy = 3.304
light_volumetric_fog_energy = 8.424
light_size = 0.024
shadow_enabled = true
spot_range = 6.868
spot_attenuation = 0.69
spot_angle_attenuation = 4.28711

[node name="SpotLight3D2" type="SpotLight3D" parent="SubViewportContainer/SubViewport/Node3D2"]
transform = Transform3D(0.996749, -0.0805643, -4.43359e-09, 0.0103777, 0.128394, 0.991669, -0.0798931, -0.988445, 0.128813, 7.35622, 2.09289, -7.785)
light_color = Color(1, 1, 0.603922, 1)
light_energy = 2.719
light_indirect_energy = 3.304
light_volumetric_fog_energy = 8.424
light_size = 0.024
shadow_enabled = true
spot_range = 6.868
spot_attenuation = 0.69
spot_angle_attenuation = 4.28711

[node name="SpotLight3D10" type="SpotLight3D" parent="SubViewportContainer/SubViewport/Node3D2"]
transform = Transform3D(0.996749, -0.0805643, -4.43359e-09, 0.0103777, 0.128394, 0.991669, -0.0798931, -0.988445, 0.128813, 17.6943, 2.09289, -20.3533)
light_color = Color(1, 1, 0.603922, 1)
light_energy = 2.719
light_indirect_energy = 3.304
light_volumetric_fog_energy = 8.424
light_size = 0.024
shadow_enabled = true
spot_range = 6.868
spot_attenuation = 0.69
spot_angle_attenuation = 4.28711

[node name="SpotLight3D11" type="SpotLight3D" parent="SubViewportContainer/SubViewport/Node3D2"]
transform = Transform3D(0.996749, -0.0805643, -4.43359e-09, 0.0103777, 0.128394, 0.991669, -0.0798931, -0.988445, 0.128813, 17.5101, 2.00294, -33.6254)
light_color = Color(1, 1, 0.603922, 1)
light_energy = 2.719
light_indirect_energy = 3.304
light_volumetric_fog_energy = 8.424
light_size = 0.024
shadow_enabled = true
spot_range = 6.868
spot_attenuation = 0.69
spot_angle_attenuation = 4.28711

[node name="SpotLight3D12" type="SpotLight3D" parent="SubViewportContainer/SubViewport/Node3D2"]
transform = Transform3D(0.996749, -0.0805643, -4.43359e-09, 0.0103777, 0.128394, 0.991669, -0.0798931, -0.988445, 0.128813, 17.6943, 2.09289, -7.785)
light_color = Color(1, 1, 0.603922, 1)
light_energy = 2.719
light_indirect_energy = 3.304
light_volumetric_fog_energy = 8.424
light_size = 0.024
shadow_enabled = true
spot_range = 6.868
spot_attenuation = 0.69
spot_angle_attenuation = 4.28711

[node name="SpotLight3D4" type="SpotLight3D" parent="SubViewportContainer/SubViewport/Node3D2"]
transform = Transform3D(0.996749, -0.0805643, -4.43359e-09, 0.0103777, 0.128394, 0.991669, -0.0798931, -0.988445, 0.128813, -9.30786, 2.09289, -20.3533)
light_color = Color(1, 1, 0.603922, 1)
light_energy = 2.719
light_indirect_energy = 3.304
light_volumetric_fog_energy = 8.424
light_size = 0.024
shadow_enabled = true
spot_range = 6.868
spot_attenuation = 0.69
spot_angle_attenuation = 4.28711

[node name="SpotLight3D5" type="SpotLight3D" parent="SubViewportContainer/SubViewport/Node3D2"]
transform = Transform3D(0.996749, -0.0805643, -4.43359e-09, 0.0103777, 0.128394, 0.991669, -0.0798931, -0.988445, 0.128813, -9.49198, 2.00294, -33.6254)
light_color = Color(1, 1, 0.603922, 1)
light_energy = 2.719
light_indirect_energy = 3.304
light_volumetric_fog_energy = 8.424
light_size = 0.024
shadow_enabled = true
spot_range = 6.868
spot_attenuation = 0.69
spot_angle_attenuation = 4.28711

[node name="SpotLight3D6" type="SpotLight3D" parent="SubViewportContainer/SubViewport/Node3D2"]
transform = Transform3D(0.996749, -0.0805643, -4.43359e-09, 0.0103777, 0.128394, 0.991669, -0.0798931, -0.988445, 0.128813, -9.30786, 2.09289, -7.785)
light_color = Color(1, 1, 0.603922, 1)
light_energy = 2.719
light_indirect_energy = 3.304
light_volumetric_fog_energy = 8.424
light_size = 0.024
shadow_enabled = true
spot_range = 6.868
spot_attenuation = 0.69
spot_angle_attenuation = 4.28711

[node name="SpotLight3D7" type="SpotLight3D" parent="SubViewportContainer/SubViewport/Node3D2"]
transform = Transform3D(0.996749, -0.0805643, -4.43359e-09, 0.0103777, 0.128394, 0.991669, -0.0798931, -0.988445, 0.128813, -19.3859, 2.09289, -20.3533)
light_color = Color(1, 1, 0.603922, 1)
light_energy = 2.719
light_indirect_energy = 3.304
light_volumetric_fog_energy = 8.424
light_size = 0.024
shadow_enabled = true
spot_range = 6.868
spot_attenuation = 0.69
spot_angle_attenuation = 4.28711

[node name="SpotLight3D8" type="SpotLight3D" parent="SubViewportContainer/SubViewport/Node3D2"]
transform = Transform3D(0.996749, -0.0805643, -4.43359e-09, 0.0103777, 0.128394, 0.991669, -0.0798931, -0.988445, 0.128813, -19.5701, 2.00294, -33.6254)
light_color = Color(1, 1, 0.603922, 1)
light_energy = 2.719
light_indirect_energy = 3.304
light_volumetric_fog_energy = 8.424
light_size = 0.024
shadow_enabled = true
spot_range = 6.868
spot_attenuation = 0.69
spot_angle_attenuation = 4.28711

[node name="SpotLight3D9" type="SpotLight3D" parent="SubViewportContainer/SubViewport/Node3D2"]
transform = Transform3D(0.996749, -0.0805643, -4.43359e-09, 0.0103777, 0.128394, 0.991669, -0.0798931, -0.988445, 0.128813, -19.3859, 2.09289, -7.785)
light_color = Color(1, 1, 0.603922, 1)
light_energy = 2.719
light_indirect_energy = 3.304
light_volumetric_fog_energy = 8.424
light_size = 0.024
shadow_enabled = true
spot_range = 6.868
spot_attenuation = 0.69
spot_angle_attenuation = 4.28711

[node name="OmniLight3D" type="OmniLight3D" parent="SubViewportContainer/SubViewport/Node3D2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.27183, 1.12379, -15.43)
light_energy = 0.2
light_volumetric_fog_energy = 2.92
light_size = 0.704
omni_range = 44.28
omni_attenuation = -0.171
omni_shadow_mode = 0

[node name="OmniLight3D2" type="OmniLight3D" parent="SubViewportContainer/SubViewport/Node3D2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.12101, 5.46831, 17.9949)
light_energy = 0.1
light_volumetric_fog_energy = 2.92
light_size = 0.704
omni_range = 44.28
omni_attenuation = -0.171
omni_shadow_mode = 0

[node name="SpotLight3D" type="SpotLight3D" parent="SubViewportContainer/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 0.0961063, 0.995371, 0, -0.995371, 0.0961063, 7.59438, 6.01381, 15.22)
light_energy = 4.712
light_volumetric_fog_energy = 8.68
light_size = 0.168
light_specular = 0.628
spot_range = 8.028
spot_attenuation = 0.94
spot_angle = 68.69

[node name="SpotLight3D2" type="SpotLight3D" parent="SubViewportContainer/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 0.0961063, 0.995371, 0, -0.995371, 0.0961063, 26.0997, 5.79787, 15.0784)
light_energy = 4.712
light_volumetric_fog_energy = 8.68
light_size = 0.168
light_specular = 0.628
spot_range = 8.028
spot_attenuation = 0.94
spot_angle = 83.09

[node name="SpotLight3D3" type="SpotLight3D" parent="SubViewportContainer/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 0.0961063, 0.995371, 0, -0.995371, 0.0961063, 17.0767, 5.71776, 20.9685)
light_energy = 4.712
light_volumetric_fog_energy = 8.68
light_size = 0.168
light_specular = 0.628
spot_range = 8.028
spot_attenuation = 0.94
spot_angle = 84.53

[node name="SpotLight3D4" type="SpotLight3D" parent="SubViewportContainer/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 0.0961063, 0.995371, 0, -0.995371, 0.0961063, 16.2148, 5.6948, 13.6949)
light_energy = 4.712
light_volumetric_fog_energy = 8.68
light_size = 0.168
light_specular = 0.628
spot_range = 8.028
spot_attenuation = 0.94
spot_angle = 31.25

[node name="WorldEnvironment" type="WorldEnvironment" parent="SubViewportContainer/SubViewport"]
environment = SubResource("Environment_lahrx")

[node name="Node3D" type="Node3D" parent="SubViewportContainer/SubViewport"]

[node name="FullScene" parent="SubViewportContainer/SubViewport" instance=ExtResource("2_nysh5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 20.4621, 0.0175877, -9.54152)

[node name="Character" type="CharacterBody3D" parent="SubViewportContainer/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 19.9727, -0.386924, -6.95304)
platform_on_leave = 1
script = ExtResource("3_lvnbd")

[node name="CollisionShape3D" type="CollisionShape3D" parent="SubViewportContainer/SubViewport/Character"]
shape = SubResource("CapsuleShape3D_bosp2")

[node name="CrouchedCollision" type="CollisionShape3D" parent="SubViewportContainer/SubViewport/Character"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.205178, 0)
shape = SubResource("CapsuleShape3D_h5vxs")
disabled = true

[node name="MeshInstance3D" type="MeshInstance3D" parent="SubViewportContainer/SubViewport/Character"]
visible = false
mesh = SubResource("CapsuleMesh_7qlmc")

[node name="Camera3D" type="Camera3D" parent="SubViewportContainer/SubViewport/Character"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.73, 0)

[node name="RayCast3D" type="RayCast3D" parent="SubViewportContainer/SubViewport/Character"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.73, 0)
target_position = Vector3(0, 0, -2)
collide_with_areas = true
debug_shape_custom_color = Color(0.950103, 0.500824, 1, 1)

[node name="Control" type="Control" parent="SubViewportContainer/SubViewport/Character"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="SubViewportContainer/SubViewport/Character/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -19.0
offset_top = -16.5
offset_right = 21.0
offset_bottom = 6.5
grow_horizontal = 2
grow_vertical = 2
text = "."
horizontal_alignment = 1
vertical_alignment = 1

[node name="SubtitleLabel" type="Label" parent="SubViewportContainer/SubViewport/Character/Control"]
layout_mode = 0
offset_right = 1150.0
offset_bottom = 576.0
theme_override_font_sizes/font_size = 65
horizontal_alignment = 1
vertical_alignment = 2

[node name="Marker3D" type="Marker3D" parent="SubViewportContainer/SubViewport/Character"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.73, 0)

[node name="Marker3D2" type="Marker3D" parent="SubViewportContainer/SubViewport/Character"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.73, -2)

[node name="SpotLight3D" type="SpotLight3D" parent="SubViewportContainer/SubViewport/Character"]
visible = false

[node name="Train" parent="SubViewportContainer/SubViewport" instance=ExtResource("4_ogrgg")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 19.1895, -3.47134, -16.4781)

[node name="Lamps" parent="SubViewportContainer/SubViewport" instance=ExtResource("5_ml03o")]
transform = Transform3D(1.11983, 0, 0, 0, 0.995239, -0.0974613, 0, 0.0974613, 0.995239, 26.3432, 5.81674, 15.9188)

[node name="Lamps3" parent="SubViewportContainer/SubViewport" instance=ExtResource("5_ml03o")]
transform = Transform3D(1.11983, 0, 0, 0, 0.995239, -0.0974613, 0, 0.0974613, 0.995239, 17.1414, 5.81674, 21.6236)

[node name="Lamps4" parent="SubViewportContainer/SubViewport" instance=ExtResource("5_ml03o")]
transform = Transform3D(1.11983, 0, 0, 0, 0.995239, -0.0974613, 0, 0.0974613, 0.995239, 6.98353, 5.81674, 15.4863)

[node name="Lamps5" parent="SubViewportContainer/SubViewport" instance=ExtResource("5_ml03o")]
transform = Transform3D(1.11983, 0, 0, 0, 1, 0, 0, 0, 1, -0.277493, 1.99495, -7.75711)

[node name="Lamps6" parent="SubViewportContainer/SubViewport" instance=ExtResource("5_ml03o")]
transform = Transform3D(1.11983, 0, 0, 0, 1, 0, 0, 0, 1, -0.277493, 1.99495, -13.8897)

[node name="Lamps7" parent="SubViewportContainer/SubViewport" instance=ExtResource("5_ml03o")]
transform = Transform3D(1.11983, 0, 0, 0, 1, 0, 0, 0, 1, -0.277493, 1.99495, -20.3181)

[node name="Lamps8" parent="SubViewportContainer/SubViewport" instance=ExtResource("5_ml03o")]
transform = Transform3D(1.11983, 0, 0, 0, 1, 0, 0, 0, 1, -0.277493, 1.99495, -26.4697)

[node name="Lamps9" parent="SubViewportContainer/SubViewport" instance=ExtResource("5_ml03o")]
transform = Transform3D(1.11983, 0, 0, 0, 1, 0, 0, 0, 1, -0.277493, 1.99495, -32.6892)

[node name="Lamps2" parent="SubViewportContainer/SubViewport" instance=ExtResource("5_ml03o")]
transform = Transform3D(1.11983, 0, 0, 0, 0.995239, -0.0974613, 0, 0.0974613, 0.995239, 26.3432, 5.81674, 10.6352)

[node name="Lamps10" parent="SubViewportContainer/SubViewport" instance=ExtResource("5_ml03o")]
transform = Transform3D(1.11983, 0, 0, 0, 1, 0, 0, 0, 1, 36.5285, 1.99495, -13.8897)

[node name="Lamps11" parent="SubViewportContainer/SubViewport" instance=ExtResource("5_ml03o")]
transform = Transform3D(1.11983, 0, 0, 0, 1, 0, 0, 0, 1, 36.5285, 1.99495, -20.3181)

[node name="Lamps12" parent="SubViewportContainer/SubViewport" instance=ExtResource("5_ml03o")]
transform = Transform3D(1.11983, 0, 0, 0, 1, 0, 0, 0, 1, 36.5285, 1.99495, -26.4697)

[node name="Lamps13" parent="SubViewportContainer/SubViewport" instance=ExtResource("5_ml03o")]
transform = Transform3D(1.11983, 0, 0, 0, 1, 0, 0, 0, 1, 36.5285, 1.99495, -32.6892)

[node name="Lamps14" parent="SubViewportContainer/SubViewport" instance=ExtResource("5_ml03o")]
transform = Transform3D(1.11983, 0, 0, 0, 0.995239, -0.0974613, 0, 0.0974613, 0.995239, 63.1493, 5.81674, 10.6352)

[node name="Lamps15" parent="SubViewportContainer/SubViewport" instance=ExtResource("5_ml03o")]
transform = Transform3D(1.11983, 0, 0, 0, 1, 0, 0, 0, 1, 26.0716, 1.99495, -13.8897)

[node name="Lamps20" parent="SubViewportContainer/SubViewport" instance=ExtResource("5_ml03o")]
transform = Transform3D(1.11983, 0, 0, 0, 1, 0, 0, 0, 1, 26.0716, 1.99495, -7.80384)

[node name="Lamps16" parent="SubViewportContainer/SubViewport" instance=ExtResource("5_ml03o")]
transform = Transform3D(1.11983, 0, 0, 0, 1, 0, 0, 0, 1, 26.0716, 1.99495, -20.3181)

[node name="Lamps21" parent="SubViewportContainer/SubViewport" instance=ExtResource("5_ml03o")]
transform = Transform3D(1.11983, 0, 0, 0, 1, 0, 0, 0, 1, 7.97101, 1.99495, -13.8897)

[node name="Lamps22" parent="SubViewportContainer/SubViewport" instance=ExtResource("5_ml03o")]
transform = Transform3D(1.11983, 0, 0, 0, 1, 0, 0, 0, 1, 7.97101, 1.99495, -7.80384)

[node name="Lamps23" parent="SubViewportContainer/SubViewport" instance=ExtResource("5_ml03o")]
transform = Transform3D(1.11983, 0, 0, 0, 1, 0, 0, 0, 1, 7.97101, 1.99495, -20.3181)

[node name="Lamps17" parent="SubViewportContainer/SubViewport" instance=ExtResource("5_ml03o")]
transform = Transform3D(1.11983, 0, 0, 0, 1, 0, 0, 0, 1, 26.0716, 1.99495, -26.4697)

[node name="Lamps18" parent="SubViewportContainer/SubViewport" instance=ExtResource("5_ml03o")]
transform = Transform3D(1.11983, 0, 0, 0, 1, 0, 0, 0, 1, 26.0716, 1.99495, -32.6892)

[node name="Lamps19" parent="SubViewportContainer/SubViewport" instance=ExtResource("5_ml03o")]
transform = Transform3D(1.11983, 0, 0, 0, 0.995239, -0.0974613, 0, 0.0974613, 0.995239, 52.6924, 5.81674, 10.6352)

[node name="CanvasLayer" type="CanvasLayer" parent="SubViewportContainer"]

[node name="ColorRect" type="ColorRect" parent="SubViewportContainer/CanvasLayer"]
material = SubResource("ShaderMaterial_dips7")
use_parent_material = true
anchors_preset = -1
anchor_top = -0.0157407
anchor_right = 0.00885417
anchor_bottom = 0.00740741
offset_right = 1919.0
offset_bottom = 1092.0
mouse_filter = 2
metadata/_edit_use_anchors_ = true

[node name="Int Objects" type="Node3D" parent="SubViewportContainer"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.09158, -2.60126, -7.39741)

[node name="coke" parent="SubViewportContainer/Int Objects" instance=ExtResource("7_k7o0f")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.27454, 0, 1.21386)
script = ExtResource("9_0qldg")

[node name="coke_yellow" parent="SubViewportContainer/Int Objects" instance=ExtResource("9_odqhn")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.6474, 0, 0)
script = ExtResource("9_0qldg")

[node name="book" parent="SubViewportContainer/Int Objects" instance=ExtResource("10_7i3ge")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 126.258, 0, 0)
script = ExtResource("9_0qldg")

[node name="ipod" parent="SubViewportContainer/Int Objects" instance=ExtResource("11_eimwt")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.08962, 0, 0)
script = ExtResource("9_0qldg")

[node name="chips" parent="SubViewportContainer/Int Objects" instance=ExtResource("12_46pok")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.6499, 0, 0)
script = ExtResource("9_0qldg")

[node name="polaroid" parent="SubViewportContainer/Int Objects" instance=ExtResource("13_ircu3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2.86954)
script = ExtResource("9_0qldg")

[node name="green" parent="SubViewportContainer/Int Objects" instance=ExtResource("14_goru1")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.417342)
script = ExtResource("9_0qldg")

[node name="gem" parent="SubViewportContainer/Int Objects" instance=ExtResource("15_gbtoo")]
script = ExtResource("9_0qldg")

[node name="Keys" parent="SubViewportContainer/Int Objects" instance=ExtResource("16_d18an")]
transform = Transform3D(0.118157, 0, 0, 0, 0.145439, 0, 0, 0, 0.0912071, 3.86157, 0.048166, -2.22946)
script = ExtResource("9_0qldg")

[node name="card" parent="SubViewportContainer/Int Objects" instance=ExtResource("6_353r6")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.64197, 0, 0.422977)
script = ExtResource("9_0qldg")

[node name="cekirdek" parent="SubViewportContainer/Int Objects" instance=ExtResource("18_udj4f")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -4.27337)
script = ExtResource("9_0qldg")

[node name="nds" parent="SubViewportContainer/Int Objects" instance=ExtResource("19_lq537")]
script = ExtResource("9_0qldg")

[node name="Cube_006" parent="SubViewportContainer/Int Objects" instance=ExtResource("6_353r6")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 24.3435, 5.41212, 25.8776)
script = ExtResource("21_lgq6r")

[node name="Cube_007" parent="SubViewportContainer/Int Objects" instance=ExtResource("6_353r6")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 24.3435, 5.41212, 25.8776)
script = ExtResource("21_lgq6r")

[node name="trashbin" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 19.1895, -3.47134, -16.4781)
script = ExtResource("7_tecrx")

[node name="CollisionShape3D" type="CollisionShape3D" parent="trashbin"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 23.99, -2.17739, -32.5602)
top_level = true
shape = SubResource("CylinderShape3D_qfghn")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="trashbin"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8.79307, -2.17739, -32.7289)
top_level = true
shape = SubResource("CylinderShape3D_qfghn")

[node name="CollisionShape3D3" type="CollisionShape3D" parent="trashbin"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8.77318, -2.1764, -8.22597)
top_level = true
shape = SubResource("CylinderShape3D_qfghn")

[node name="trashbin2" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 23.439, -1.25574, -16.4781)
script = ExtResource("7_tecrx")

[node name="CollisionShape3D" type="CollisionShape3D" parent="trashbin2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.523527, -0.984199, 8.74898)
shape = SubResource("CylinderShape3D_qfghn")

[node name="atm" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 21.7895, 3.32431, 15.0793)
script = ExtResource("7_lfu37")

[node name="CollisionShape3D" type="CollisionShape3D" parent="atm"]
transform = Transform3D(0.997727, 0, -0.0673884, 0, 1, 0, 0.0673884, 0, 0.997727, 6.63101, -0.969717, 3.49535)
shape = SubResource("BoxShape3D_4dp70")

[node name="Marker3D" type="Marker3D" parent="atm"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6.35399, -0.722854, 3.85964)

[node name="ProgressBar" type="ProgressBar" parent="atm"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = 11.0
offset_right = 61.0
offset_bottom = 22.0
grow_horizontal = 2
grow_vertical = 2
max_value = 360.0
show_percentage = false

[connection signal="body_entered" from="trashbin" to="trashbin" method="_on_body_entered"]
[connection signal="body_entered" from="trashbin2" to="trashbin2" method="_on_body_entered"]
